wordpress/wp-content/themes/twentythirteen-child/student-life-styles.css
div.student-life-content{
	width:767px;
	margin:0 auto;
	font-family:Meiryo;
}

img.cebu-school-life{
	display:block;
    margin:auto;
	padding-top:17px;
	padding-bottom: 10px;
}

img.cebu-school-life.b{
	padding-top: 70px;
	padding-bottom:0px;
}

.cebu-life-entry{
	width:360px;
	height: 480px;
	background: #E9E9E9;
	padding:29px;
}

.school-life-entry{
	width:360px;
	height: 406px;
	background: #E9E9E9;
	padding:29px;
}

.cebu-life-entry-container{
	margin-top:50px;
}

.cebu-life-entry-container.b{
	margin-top:45px;
}

.cebu-life-entry-container:last-child{
	margin-bottom: 40px;
}

.school-life-entry-container{
	margin-top:40px;
}

.school-life-entry-container:last-child{
	margin-bottom: 40px;
}

.cebu-life-entry img{
	margin-bottom:10px;
}

.cebu-life-entry span{
	font-size:15px;
	margin-bottom:10px;
	font-weight:bold;
	line-height:35px;
}

.cebu-life-entry span:after{
	display:block;
	content:"";
	border-bottom:1px solid #FFD806;
}

.cebu-life-entry p{
	padding:0px;
	line-height:24px;
	margin-top:19px;
}


.school-life-entry img{
	margin-bottom:10px;
}

.school-life-entry span{
	font-size:15px;
	margin-bottom:10px;
	font-weight:bold;
	line-height:35px;
}

.school-life-entry span:after{
	display:block;
	content:"";
	border-bottom:1px solid #FFD806;
}

.school-life-entry p{
	padding:0px;
	line-height:24px;
	margin-top:19px;
}

